# rust-code-mcp

./: .claudeignore  .gitignore  .mcp.json  .mcp.toml  AGENTS.md  BUGFIX_TANTIVY_LOCK.md  COMPLETE_SYSTEM_COMPARISON.md  COMPLETE_TECHNICAL_COMPARISON.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  COMPREHENSIVE_COMPARISON_ANALYSIS.md  COMPREHENSIVE_SYSTEM_COMPARISON.md  CRITICAL_IMPLEMENTATION_GAPS_ANALYSIS.md  Cargo.toml  EMBEDDING_ANALYSIS.md  EMBEDDING_ANALYSIS_INDEX.md  EMBEDDING_QUICK_REFERENCE.md  EXPLORATION_REPORT.md  FIX_FORCE_REINDEX.md  FIX_PORT_CONFIGURATION.md  FIX_SEMANTIC_SEARCH_COLLECTION.md  IMPL.md  IMPL_PLAN_2.md  INCREMENTAL_INDEXING_ANALYSIS.md  INCREMENTAL_INDEXING_IMPLEMENTATION_COMPLETE.md  INCREMENTAL_INDEXING_IMPLEMENTATION_PLAN.md  INCREMENTAL_INDEXING_SUMMARY.md  ISSUES.md  LIST.md  MCP_ARCHITECTURE_DIAGRAMS.md  MCP_COMPARISON_GUIDE.md  MCP_DOCUMENTATION_INDEX.md  MCP_EXPLORATION_SUMMARY.txt  MCP_IMPLEMENTATION_ANALYSIS.md  MCP_QUICK_REFERENCE.md  OPTI1.md  OPTI2.md  OPTI3.md  PHASE1_TEST_RESULTS.md  PHASE2_COMPLETE.md  PHASE2_TEST_RESULTS.md  (+46 more)
.docs/: ARCHITECTURE.md  TODO.md  (+76 more)
crates/rmc-config/: Cargo.toml  README.md
crates/rmc-config/src/: config.rs
crates/rmc-config/src/config/: errors.rs  indexer.rs
crates/rmc-engine/: Cargo.toml  README.md
crates/rmc-engine/src/: lib.rs
crates/rmc-engine/src/chunker/: chunker.rs  split.rs  types.rs
crates/rmc-engine/src/embeddings/: backend.rs  batching.rs  error.rs  mod.rs  profile.rs  qwen3.rs  util.rs
crates/rmc-engine/src/embeddings/openrouter/: client.rs  metrics.rs  mod.rs  response.rs
crates/rmc-engine/src/parser/: imports.rs  mod.rs  rust_parser.rs  type_references.rs  types.rs
crates/rmc-engine/src/search/: bm25.rs  error.rs  mod.rs
crates/rmc-engine/src/vector_store/: error.rs  lancedb.rs  mod.rs  traits.rs
crates/rmc-graph/: Cargo.toml  README.md
crates/rmc-graph/src/: lib.rs
crates/rmc-graph/src/graph/: attributes.rs  audit_util.rs  channel_audit.rs  derive_audit.rs  docs_audit.rs  embedding_cache.rs  extract.rs  fn_body_audit.rs  impls.rs  labels.rs  loader.rs  math.rs  mod.rs  recursion_check.rs  signatures.rs  snapshot.rs  statics.rs  storage.rs  usages.rs
crates/rmc-indexing/: Cargo.toml  README.md
crates/rmc-indexing/src/: lib.rs  metadata_cache.rs
crates/rmc-indexing/src/indexing/: backup.rs  consistency.rs  embedding_batcher.rs  error.rs  error_collection.rs  file_processor.rs  identity.rs  incremental.rs  incremental_service.rs  indexer_core.rs  mod.rs  project_paths.rs  retry.rs  search.rs  tantivy_adapter.rs  unified.rs  unified_parallel.rs
crates/rmc-indexing/src/metrics/: memory.rs  mod.rs
crates/rmc-indexing/src/monitoring/: backup.rs  health.rs  mod.rs
crates/rmc-indexing/src/security/: mod.rs  secrets.rs
crates/rmc-server/: Cargo.toml  README.md
crates/rmc-server/src/: lib.rs
crates/rmc-server/src/mcp/: defaults.rs  mod.rs  project_paths.rs  runtime.rs  search_cache.rs  sync.rs  workspace_locks.rs
crates/rmc-server/src/semantic/: loader.rs  mod.rs  position.rs  rename.rs
crates/rmc-server/src/tools/: mod.rs  router.rs
crates/rust-code-mcp/: Cargo.toml
crates/rust-code-mcp-bm25/: Cargo.toml
crates/rust-code-mcp-bm25/src/: lib.rs  schema.rs  search.rs  tantivy_adapter.rs
crates/rust-code-mcp-embeddings/: Cargo.toml
crates/rust-code-mcp-embeddings/src/: error.rs  lib.rs
crates/rust-code-mcp-graph/: Cargo.toml
crates/rust-code-mcp-graph/src/: ast_resolve.rs  attributes.rs  bindings.rs  channel_audit.rs  derive_audit.rs  docs_audit.rs  extract.rs  hir_trim.rs  ids.rs  impls.rs  lib.rs  loader.rs  queries.rs  recursion_check.rs  signatures.rs  snapshot.rs  statics.rs  storage.rs  unsafe_audit.rs  usages.rs
crates/rust-code-mcp-indexing/: Cargo.toml
crates/rust-code-mcp-indexing/src/: backup.rs  config.rs  consistency.rs  embedding_batcher.rs  error.rs  file_processor.rs  incremental.rs  indexer_core.rs  lib.rs  merkle.rs  metadata_cache.rs  retry.rs  unified.rs
crates/rust-code-mcp-indexing/src/metrics/: memory.rs  mod.rs
crates/rust-code-mcp-indexing/src/security/: mod.rs
crates/rust-code-mcp-indexing/tests/: bench_incremental_performance.rs  benchmark_gpu_performance.rs  full_incremental_flow.rs  incremental_indexing.rs  merkle_standalone.rs
crates/rust-code-mcp-ra-analysis/: Cargo.toml
crates/rust-code-mcp-ra-analysis/src/: lib.rs  loader.rs
crates/rust-code-mcp-search/: Cargo.toml
crates/rust-code-mcp-search/src/: error.rs  lib.rs  resilient.rs  rrf_tuner.rs
crates/rust-code-mcp-server/: Cargo.toml
crates/rust-code-mcp-server/src/: config.rs  lib.rs  main.rs  semantic.rs
crates/rust-code-mcp-server/src/mcp/: sync.rs
crates/rust-code-mcp-server/src/monitoring/: health.rs  mod.rs
crates/rust-code-mcp-server/src/tools/: analysis_tools.rs  graph_tools.rs  health_tool.rs  index_tool.rs  indexing_tools.rs  project_paths.rs  query_tools.rs  search_tool_router.rs
crates/rust-code-mcp-server/tests/: burn_performance.rs  evaluation.rs  gpu_index_jsonrpc.rs  hybrid_search.rs  index_tool_integration.rs  sync_manager_integration.rs  test_queries.json
crates/rust-code-mcp-vector-store/: Cargo.toml
crates/rust-code-mcp-vector-store/src/: lancedb.rs  lib.rs  traits.rs
crates/rust-code-mcp/examples/: benchmark_phases.rs  chunk_token_stats.rs  count_items.rs  dead_pub_report.rs  debug_burn_loader.rs  debug_burn_target.rs  debug_itemscope.rs  embedding_profile_smoke.rs  graph_burn.rs  ide_functional_test.rs  ide_poc.rs  index_codebase.rs  openrouter_batch_matrix.rs  probe_workspace.rs  quick_bench.rs  qwen3_parity_probe.rs  rebuild_burn_default.rs  spike_usages.rs  syntax_vs_ide.rs  test_gpu_speed.rs  timing_extract.rs
crates/rust-code-mcp/src/: main.rs
crates/rust-code-mcp/tests/: bench_incremental_performance.rs  benchmark_gpu_performance.rs  evaluation.rs  test_burn_performance.rs  test_full_incremental_flow.rs  test_gpu_index_jsonrpc.rs  test_hybrid_search.rs  test_incremental_indexing.rs  test_index_tool_integration.rs  test_mcp_stdio_transport.rs  test_merkle_standalone.rs  test_sync_manager_integration.rs
(+1024 files in other folders)
