[package]
name = "file-search-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP and async runtime
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "server",
  "transport-io",
] }
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "io-std",
  "signal",
] }

# Search and indexing
tantivy = "0.22.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }  # Unique IDs for chunks

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "std",
  "fmt",
] }

# Phase 1: Persistent Index + Incremental Updates
notify = "6"           # File watching
sled = "0.34"          # Embedded key-value store for metadata cache
sha2 = "0.10"          # SHA-256 file hashing
directories = "5"      # Cross-platform config/data directories

# Phase 2: Rust code parsing with rust-analyzer syntax
ra_ap_syntax = "0.0.330"

# IDE integration for semantic analysis (find_definition, find_references)
ra_ap_ide = "0.0.330"
ra_ap_ide_db = "0.0.330"
"ra_ap_load-cargo" = "0.0.330"
ra_ap_project_model = "0.0.330"
ra_ap_vfs = "0.0.330"
ra_ap_paths = "0.0.330"
ra_ap_hir = "0.0.330"
ra_ap_hir_def = "0.0.330"
ra_ap_base_db = "0.0.330"

# Persisted hypergraph store
heed = "0.22.1"

# Phase 3: Semantic Code Chunking
text-splitter = "0.13"  # Semantic text chunking

# Phase 4: Embedding Generation
fastembed = { version = "5.13.4", default-features = false, features = ["hf-hub-native-tls", "qwen3", "cuda"] }
candle-core = "0.10.2"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "native-tls"] }
# fastembed unconditionally depends on `ort` (ONNX Runtime) even when only the
# Candle Qwen3 path is used. We never instantiate any ONNX model, so disable
# linking to libonnxruntime via ort's `alternative-backend` feature (which
# propagates `ort-sys/disable-linking`). This is the upstream-blessed way to
# use fastembed without an ONNX Runtime on the system.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["alternative-backend"] }

# Phase 5: Vector Database
async-trait = "0.1"    # Async trait support
thiserror = "1"        # Error derive macros
futures = "0.3"        # Futures traits for stream operations

# Vector database - embedded (default)
lancedb = "0.29.0"
arrow-array = "58"
arrow-schema = "58"

# Additional dependencies for Phase 1
walkdir = "2"          # Directory traversal for indexing
anyhow = "1"           # Error handling
regex = "1"            # Secrets scanning patterns
glob = "0.3"           # File pattern matching

# Merkle tree for 100x faster change detection (Week 2)
rs_merkle = "1.4"      # Merkle tree implementation

# Performance monitoring
sysinfo = "0.30"       # System memory monitoring

# Tokenizer (used directly by examples; transitively in fastembed)
tokenizers = "0.22"

# Parallel processing
rayon = "1.10"         # Data parallelism
num_cpus = "1.16"      # CPU count detection

[features]
default = ["embedded"]  # LanceDB embedded backend (zero-config)
embedded = []  # LanceDB is always included, this is just a marker

[[example]]
name = "load_benchmark"
path = "examples/load_benchmark.rs"

[[example]]
name = "ide_load_benchmark"
path = "examples/ide_load_benchmark.rs"

[[example]]
name = "ide_functional_test"
path = "examples/ide_functional_test.rs"

[[example]]
name = "graph_burn"
path = "examples/graph_burn.rs"

[[example]]
name = "debug_burn_loader"
path = "examples/debug_burn_loader.rs"

[[example]]
name = "debug_burn_target"
path = "examples/debug_burn_target.rs"

[[example]]
name = "rebuild_burn_default"
path = "examples/rebuild_burn_default.rs"

[[example]]
name = "debug_itemscope"
path = "examples/debug_itemscope.rs"

[[example]]
name = "probe_workspace"
path = "examples/probe_workspace.rs"

[[example]]
name = "spike_usages"
path = "examples/spike_usages.rs"

[[example]]
name = "dead_pub_report"
path = "examples/dead_pub_report.rs"

[dev-dependencies]
tempfile = "3"         # Temporary directories for tests
walkdir = "2"          # For test file discovery

[[example]]
name = "count_items"
path = "examples/count_items.rs"

[[example]]
name = "chunk_token_stats"
path = "examples/chunk_token_stats.rs"
