[workspace]
resolver = "3"
members = [
  "crates/rust-code-mcp",
  "crates/rmc-config",
  "crates/rmc-engine",
  "crates/rmc-graph",
  "crates/rmc-indexing",
  "crates/rmc-server",
]
default-members = ["crates/rust-code-mcp"]

[workspace.dependencies]
# MCP and async runtime
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "server",
  "transport-io",
] }
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "io-std",
  "signal",
] }

# Search and indexing
tantivy = "0.22.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
toml = "0.9.10"
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }  # Unique IDs for chunks
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "std",
  "fmt",
] }

# Phase 1: Persistent Index + Incremental Updates
notify = "6"           # File watching
sled = "0.34"          # Embedded key-value store for metadata cache
sha2 = "0.10"          # SHA-256 file hashing
directories = "5"      # Cross-platform config/data directories

# Phase 2: Rust code parsing with rust-analyzer syntax
ra_ap_syntax = "0.0.330"

# IDE integration for semantic analysis (find_definition, find_references)
ra_ap_ide = "0.0.330"
ra_ap_ide_db = "0.0.330"
"ra_ap_load-cargo" = "0.0.330"
ra_ap_project_model = "0.0.330"
ra_ap_vfs = "0.0.330"
ra_ap_paths = "0.0.330"
ra_ap_hir = "0.0.330"
ra_ap_hir_def = "0.0.330"
ra_ap_base_db = "0.0.330"

# Persisted hypergraph store
heed = "0.22.1"

# Phase 3: Semantic Code Chunking
text-splitter = "0.13"  # Semantic text chunking

# Phase 4: Embedding Generation
fastembed = { version = "5.13.4", default-features = false, features = [
  "hf-hub-native-tls",
  "ort-load-dynamic",
  "qwen3",
  "cuda",
] }
candle-core = "0.10.2"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "native-tls"] }

# Phase 5: Vector Database
async-trait = "0.1"    # Async trait support
thiserror = "1"        # Error derive macros
futures = "0.3"        # Futures traits for stream operations

# Vector database - embedded (default)
lancedb = "0.29.0"
arrow-array = "58"
arrow-schema = "58"

# Additional dependencies for Phase 1
walkdir = "2"          # Directory traversal for indexing
anyhow = "1"           # Error handling
regex = "1"            # Secrets scanning patterns
glob = "0.3"           # File pattern matching
cargo_metadata = "0.23.1" # Cargo target metadata for workspace crate classification

# Merkle tree for 100x faster change detection (Week 2)
rs_merkle = "1.4"      # Merkle tree implementation

# Performance monitoring
sysinfo = "0.30"       # System memory monitoring

# Tokenizer (used directly by examples; transitively in fastembed)
tokenizers = "0.22"

# Parallel processing
rayon = "1.10"         # Data parallelism
num_cpus = "1.16"      # CPU count detection

[patch.crates-io]
fastembed = { path = "vendor/fastembed" }
