[package]
name    = "rmc-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# parser/ — rust-analyzer syntax
ra_ap_syntax = { workspace = true }

# schema.rs — Tantivy schema definitions
tantivy = { workspace = true }

# chunker/ — semantic code chunking
serde = { workspace = true }
uuid  = { workspace = true }
