[package]
name    = "rmc-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# parser/ — rust-analyzer syntax
ra_ap_syntax = { workspace = true }

# schema.rs — Tantivy schema definitions
tantivy = { workspace = true }

# chunker/ — semantic code chunking
serde = { workspace = true }
uuid  = { workspace = true }

# embeddings/ — providers, backends, profiles
reqwest     = { workspace = true }
hf-hub      = { workspace = true }
fastembed   = { workspace = true }
candle-core = { workspace = true }
tokenizers  = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
toml        = { workspace = true }

# vector_store/ — LanceDB-backed vector storage
lancedb      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
async-trait  = { workspace = true }
directories  = { workspace = true }

# search/ — Tantivy BM25 + hybrid search
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
