[package]
name    = "rmc-indexing"
version = "0.1.0"
edition = "2024"

[dependencies]
# In-workspace dependencies
rmc-engine = { path = "../rmc-engine" }
rmc-config = { path = "../rmc-config" }

# Search and indexing
tantivy = { workspace = true }

# Serialization
serde       = { workspace = true }
serde_json  = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Phase 1: Persistent Index + Incremental Updates
sled = { workspace = true }
sha2 = { workspace = true }

# Filesystem traversal
walkdir = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Pattern matching
regex = { workspace = true }
glob  = { workspace = true }

# Merkle tree for change detection
rs_merkle = { workspace = true }

# Performance monitoring
sysinfo = { workspace = true }

# Parallel processing
rayon    = { workspace = true }
num_cpus = { workspace = true }

# Bincode for cache serialization
bincode = { workspace = true }

# Cross-platform config/data directories (used by snapshot path resolver)
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"
