[package]
name = "rust-code-mcp-ra-analysis"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
num_cpus = { workspace = true }
ra_ap_ide = { workspace = true }
ra_ap_ide_db = { workspace = true }
"ra_ap_load-cargo" = { workspace = true }
ra_ap_project_model = { workspace = true }
ra_ap_vfs = { workspace = true }
tracing = { workspace = true }
