[package]
name = "rust-code-mcp-vector-store"
version.workspace = true
edition.workspace = true

[dependencies]
rust-code-mcp-model = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
lancedb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
